--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.1
   animated_splash_screen: ^1.1.0
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
@@ -28,7 +29,7 @@ flutter:
 
 
   assets:
-    - assets/
+    - assets/images/web.jpg
 
   # fonts:
   #   - family: Schyler
