--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   curved_navigation_bar: ^1.0.1
   animated_splash_screen: ^1.1.0
   shared_preferences: ^2.0.8
+  font_awesome_flutter: ^9.1.0
 
 dev_dependencies:
   flutter_test:
