--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,26 @@ dev_dependencies:
 
   flutter_lints: ^1.0.0
   flutter_native_splash: ^1.2.4
+  flutter_launcher_icons: ^0.9.2
+
+  # 1a1a1a run: flutter clean && flutter pub get && flutter pub run flutter_native_splash:create
+flutter_native_splash:
+  color: "#4756DF"
+  color_dark: "#4756DF"
+  image: assets/images/logo_splash.jpg
+  android: true
+  ios: true
+  # android_gravity: fill
+  # ios_content_mode: scaleAspectFill
+
+  # Generate App Icon with Multiple Commands:
+  # flutter clean
+  # flutter pub get
+  # flutter pub run flutter_launcher_icons:main
+flutter_icons:
+  image_path: "assets/images/logo_icon.jpg"
+  android: true
+  ios: true
 
 flutter:
 
@@ -31,11 +51,15 @@ flutter:
 
 
   assets:
-    - assets/images/web.jpg
+    - assets/images/Onb01.png
+    - assets/images/Onb02.png
+    - assets/images/Onb03.png
     - assets/images/r-01.jpg
     - assets/images/r-02.jpg
     - assets/images/r-03.jpg
     - assets/images/logo1.jpg
+    - assets/images/logo_splash.jpg
+    - assets/images/logo_icon.jpg
 
   # fonts:
   #   - family: Schyler
