suppression des icones de restaurant et guide dans l'accueil

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
     - assets/images/r-02.jpg
     - assets/images/r-03.jpg
     - assets/images/logo1.jpg
+    - assets/images/imghome.jpeg
     - assets/images/logo_splash.png
     - assets/images/logo_icon.jpg
 
