--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   shared_preferences: ^2.0.8
   font_awesome_flutter: ^9.1.0
   carousel_slider: ^4.0.0
+  package_info_plus: ^1.3.0
 
 dev_dependencies:
   flutter_test:
