--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   font_awesome_flutter: ^9.1.0
   carousel_slider: ^4.0.0
   page_transition: ^2.0.1-nullsafety.0
+  package_info_plus: ^1.3.0
 
 dev_dependencies:
   flutter_test:
