--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   carousel_slider: ^4.0.0
   page_transition: ^2.0.1-nullsafety.0
   package_info_plus: ^1.3.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
