--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   package_info_plus: ^1.3.0
   http: ^0.13.4
 
+  flutter_rating_bar: ^4.0.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
