--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_native_splash: ^1.2.4
   flutter_launcher_icons: ^0.9.2
+  json_serializable: ^4.1.4
+  json_annotation: ^4.0.1
+  # flutter pub run build_runner build || dart run build_runner build
+  build_runner: ^2.0.6
 
   # 1a1a1a run: flutter clean && flutter pub get && flutter pub run flutter_native_splash:create
 flutter_native_splash:
