--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
 
   flutter_rating_bar: ^4.0.0
   flutter_cart: ^0.0.6
+  multi_select_flutter: ^4.0.0
+  modal_bottom_sheet: ^2.0.0
 
 
 dev_dependencies:
