--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   flutter_cart: ^0.0.6
   multi_select_flutter: ^4.0.0
   modal_bottom_sheet: ^2.0.0
+  provider: ^6.0.1
+  another_flushbar: ^1.10.25
 
 
 dev_dependencies:
@@ -33,7 +35,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^1.0.0
-  flutter_native_splash: ^1.2.4
+  flutter_native_splash: ^1.3.1
   flutter_launcher_icons: ^0.9.2
   json_serializable: ^4.1.4
   json_annotation: ^4.0.1
@@ -44,10 +46,10 @@ dev_dependencies:
 flutter_native_splash:
   color: "#2196F3"
   color_dark: "#2196F3"
-  image: assets/images/logo_splash.png
+  image: assets/image_splash_full.png
   android: true
   ios: true
-  # android_gravity: fill
+  android_gravity: fill
   # ios_content_mode: scaleAspectFill
 
   # Generate App Icon with Multiple Commands:
@@ -55,35 +57,19 @@ flutter_native_splash:
   # flutter pub get
   # flutter pub run flutter_launcher_icons:main
 flutter_icons:
-  image_path: "assets/images/logo_icon.jpg"
+  image_path: "assets/logo_icon.png"
   android: true
   ios: true
 
 flutter:
-
   uses-material-design: true
 
 
   assets:
-    - assets/images/Onb01.png
-    - assets/images/Onb02.png
-    - assets/images/Onb03.png
-    - assets/images/r-01.jpg
-    - assets/images/r-02.jpg
-    - assets/images/r-03.jpg
-    - assets/images/logo1.jpg
-    - assets/images/imghome.jpeg
-    - assets/images/logo_splash.png
-    - assets/images/logo_icon.jpg
-    - assets/datas/00.JPG
-    - assets/datas/01.JPG
-    - assets/datas/02.JPG
-    - assets/datas/03.JPG
-    - assets/datas/r0.jpg
-    - assets/datas/r1.jpg
-    - assets/datas/r2.jpg
-    - assets/bg01.png
-    - assets/bg02.png
+    - assets/trophy.png
+    - assets/logo.jpg
+    - assets/bg_head_trophy.jpg
+
 
   # fonts:
   #   - family: Schyler
